# ldld

./: .gitignore  .gitmodules  LICENSE.txt  README.md  environment.yml  setup.cfg
handouts/: 2장 CNN.pptx  2장 MLP에서 Transformer까지.pptx  3-rnn.pptx  5-gnn.pptx  README.md  readme.md
notebooks/: 0-idl.ipynb  1-mlp.ipynb  2-cnn.ipynb  3-rnn.ipynb  4-trs.ipynb  5-gnn.ipynb
scripts/: bootstrap.sh  init_seoklab.sh  start-jupyter.sh
src/ldld/: datasets.py  utils.py
src/ldld/models/: __init__.py  gnn.py  params.py  traditional.py  transformer.py  utils.py
src/ldld/training/: common.py  herg_central.py  mnist.py  utils.py
