[metadata]
name = ldld
author = seoklab
author_email = contact@seoklab.org
version = 0.1.0
url = https://github.com/seoklab/ldld
description = Learning Deep Learning Deeply
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	ldld-mlp = ldld.training.mnist:train_mlp
	ldld-cnn = ldld.training.mnist:train_cnn
	ldld-rnn = ldld.training.herg_central:train_rnn
	ldld-trs = ldld.training.herg_central:train_trs
	ldld-gnn = ldld.training.herg_central:train_gnn

[flake8]
max-line-length = 79
ignore = E266,E4,E74,F403,F405,W503
per-file-ignores =
	# imported but unused
	__init__.py: F401
extend-exclude = .github/**,build/**,dist/**,*.pyc
